# grafana

./: .gitignore  grafana.cabal  package.yaml
src/: Grafana.hs
src/Grafana/Plugin/: PieChart.hs
