cabal-version: 2.2
name: grafana
version: 0.2
license: BSD-3-Clause
license-file: LICENSE
maintainer: Ethan Jones
author: Ethan Jones
synopsis: API for creating grafana dashboards represented as json
description:
    'grafana' provides datatypes that correspond to components of
    grafana dashboards, and combinators for constructing dashboards.
    It should be suitable for a UI that allows users to construct
    grafana dashboards.
category: Graphics, Tooling
extra-source-files:
    CHANGELOG.md

source-repository head
    type: git
    location: git://github.com/chessai/grafana.git

library
    exposed-modules:
        Grafana
        Grafana.Layout
        Grafana.Plugin.PieChart
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.19 && <4.20,
        bytestring >=0.12 && <0.13,
        aeson >=2.2 && <2.3,
        aeson-pretty >=0.8 && <0.9,
        containers >=0.6 && <0.7,
        text >=1.2 && <2.2

test-suite unit
    type: exitcode-stdio-1.0
    main-is: UnitTests.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        aeson >=2.2 && <2.3,
        aeson-pretty >=0.8 && <0.9,
        base >=4.19 && <4.20,
        bytestring >=0.12 && <0.13,
        Diff -any,
        grafana -any,
        tasty >=1.4 && <1.6,
        tasty-hunit >=0.10 && <0.11
